# git-iblame

./: Cargo.toml  README.md  Taskfile.yml
.github/: dependabot.yml
.github/workflows/: rust-ci.yml  rust-publish.yml
hooks/: precommit.sh
src/: blame_commit.rs  blame_content.rs  blame_line.rs  blame_renderer.rs  cli.rs  command.rs  command_key_map.rs  command_prompt.rs  command_ui.rs  diff_part.rs  git2_time_to_chrono_ext.rs  git_tools.rs  lib.rs  main.rs
src/blame/: blame_error.rs  commit_iterator.rs  diff_part.rs  file_commit.rs  file_commits.rs  file_content.rs  file_diff.rs  file_diffs.rs  file_history.rs  git_diff_line.rs  line.rs  line_number_map.rs  mod.rs
src/extensions/: git2_time_to_chrono_ext.rs  git_tools.rs  line_read_buffer.rs  mod.rs  or_default.rs  range_ext.rs  terminal_raw_mode_scope.rs
src/ui/: blame_renderer.rs  cli.rs  command.rs  command_key_map.rs  command_prompt.rs  command_ui.rs  mod.rs
