[package]
name = "git-iblame"
version = "0.8.5"
edition = "2024"
rust-version = "1.89"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Interactive enhanced `git blame` command line tool."
keywords = ["git", "blame", "command", "command-line-tool", "cli"]
repository = "https://github.com/kojiishi/git-iblame"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "hooks", ".vscode"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
env_logger = "0.11.8"
git2 = { version = "0.20.2", default-features = false }
log = "0.4.28"
regex = "1.11.2"

[dev-dependencies]
tempfile = "3.22.0"
