[package]
name = "git-iblame"
version = "0.9.0"
edition = "2024"
rust-version = "1.89"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Interactive enhanced `git blame` command line tool."
keywords = ["git", "blame", "command", "command-line-tool", "cli"]
repository = "https://github.com/kojiishi/git-iblame"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", "hooks", ".vscode"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
env_logger = "0.11.10"
git2 = { version = "0.20.4", default-features = false }
git2-time-chrono-ext = "0.1.1"
log = "0.4.29"
regex = "1.12.3"
thiserror = "2.0.18"

[features]
git2 = []

[dev-dependencies]
tempfile = "3.27.0"
