[package]
name = "git-iblame"
version = "0.10.3"
edition = "2024"
rust-version = "1.89"
authors = ["Koji Ishii <kojiishi@gmail.com>"]
description = "Interactive enhanced `git blame` command line tool."
keywords = ["git", "blame", "command", "command-line-tool", "cli"]
repository = "https://github.com/kojiishi/git-iblame"
readme = "README.md"
license = "Apache-2.0"
exclude = [".github", ".gitignore", ".vscode", "Taskfile.yml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["osc52"] }
env_logger = "0.11.10"
git2 = { version = "0.21.0", default-features = false }
git2-time-chrono-ext = "1.0.1"
log = "0.4.32"
regex = "1.12.3"
thiserror = "2.0.18"
unicode-width-utils = "0.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
arboard = "3.4.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
arboard = { version = "3.4.1", optional = true }

[features]
# Use the `arboard` crate for clipboard operations instead of `crossterm`'s OSC 52.
arboard = ["dep:arboard"]
# Use the `git2` crate to compute the commit diffs by default.
git2 = []

[dev-dependencies]
tempfile = "3.27.0"
